[~] responsive row for documents passage

--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -33,49 +33,55 @@
                     <div id="fiches" class="tab-pane fade show active" role="tabpanel" aria-labelledby="fiches-tab">
                         <h3>Fiches Techniques</h3>
                         <div class="row text-center justify-content-center">
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/jaune_debout.png') }}" alt="jaune_debout">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/jaune_debout.png') }}" alt="jaune_debout">
                             </div>
-                            <div class="col-lg-4 my-auto">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
                                 <a href="{{ path('jaune') }}" target="_blank">
                                     <h2>Ceinture Jaune</h2>
                                 </a>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/jaune_sol.png') }}" alt="jaune_sol">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/jaune_sol.png') }}" alt="jaune_sol">
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/orange_debout.png') }}" alt="orange_debout">
+                        </div>
+                        <div class="row text-center justify-content-center">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/orange_debout.png') }}" alt="orange_debout">
                             </div>
-                            <div class="col-lg-4 my-auto">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
                                 <a href="{{ path('orange') }}" target="_blank">
                                     <h2>Ceinture Orange</h2>
                                 </a>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/orange_sol.png') }}" alt="orange_sol">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/orange_sol.png') }}" alt="orange_sol">
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/verte_debout.png') }}" alt="verte_debout">
+                        </div>
+                        <div class="row text-center justify-content-center">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/verte_debout.png') }}" alt="verte_debout">
                             </div>
-                            <div class="col-lg-4 my-auto">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
                                 <a href="{{ path('verte') }}" target="_blank">
                                     <h2>Ceinture Verte</h2>
                                 </a>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/verte_sol.png') }}" alt="verte_sol">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/verte_sol.png') }}" alt="verte_sol">
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/marron_debout.png') }}" alt="marron_debout">
+                        </div>
+                        <div class="row text-center justify-content-center">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/marron_debout.png') }}" alt="marron_debout">
                             </div>
-                            <div class="col-lg-4 my-auto">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
                                 <a href="{{ path('marron') }}" target="_blank">
                                     <h2>Ceinture Marron</h2>
                                 </a>
                             </div>
-                            <div class="col-lg-4">
-                                <img src="{{ asset('assets/marron_sol.png') }}" alt="marron_sol">
+                            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 my-auto">
+                                <img class="img-fluid" src="{{ asset('assets/marron_sol.png') }}" alt="marron_sol">
                             </div>
                         </div>
                     </div>
